force-app/main/default/objects/JMSuppliesOrder__c/JMSuppliesOrder__c.object-meta.xml
<CustomObject>
    <description>Custom object to store JMSuppliesOrders data</description>
    <label>JMSuppliesOrder</label>
    <nameField>
        <label>JMSuppliesOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JMSuppliesOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>