force-app/main/default/objects/JMSuppliesOrder__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer</description>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>