force-app/main/default/objects/JMSuppliesOrder__c/fields/Favourite_Colour__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Colour__c</fullName>
    <description>Favourite Colour</description>
    <label>Favourite Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>