force-app/main/default/objects/JMSuppliesOrder__c/fields/JM_Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>JM_Order_Date_Time__c</fullName>
    <description>JM Order Date Time</description>
    <label>JM Order Date Time</label>
    <type>DateTime</type>
</CustomField>