force-app/main/default/objects/JMSuppliesOrder__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>JM Product details</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>