force-app/main/default/objects/JMSuppliesOrder__c/fields/Sale_No__c.field-meta.xml
<CustomField>
    <fullName>Sale_No__c</fullName>
    <label>Sale No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>